--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,35 +2,29 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
 
-    - name: Build Docker Image
-      run: |
-        docker build -t myapp:${{ github.sha }} ./app
+      - name: Login to AWS ECR
+        uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Login to ECR and Push
-      run: |
-        aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin <your-account-id>.dkr.ecr.ap-south-1.amazonaws.com
-        docker tag myapp:${{ github.sha }} <your-ecr-repo-url>:latest
-        docker push <your-ecr-repo-url>:latest
+      - name: Build and Push Docker Image
+        run: |
+          docker build -t flask-app:latest ./app
+          docker tag flask-app:latest <your-ecr-url>:latest
+          docker push <your-ecr-url>:latest
 
-    - name: Deploy to EKS
-      run: |
-        aws eks update-kubeconfig --region ap-south-1 --name my-eks-cluster
-        kubectl apply -f k8s/
-
+      - name: Deploy to EKS
+        run: |
+          aws eks update-kubeconfig --region ap-south-1 --name devops-eks-cluster
+          kubectl apply -f k8s/
