--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,23 @@
-name: CI/CD Pipeline
+name: Deploy to EKS
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
-  build-deploy:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      - name: Configure AWS
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-south-1
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to AWS ECR
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Build and Push Docker Image
-        run: |
-          docker build -t flask-app:latest ./app
-          docker tag flask-app:latest <your-ecr-url>:latest
-          docker push <your-ecr-url>:latest
+      - name: Update Kubeconfig
+        run: aws eks update-kubeconfig --region ap-south-1 --name devops-eks-cluster
 
       - name: Deploy to EKS
         run: |
-          aws eks update-kubeconfig --region ap-south-1 --name devops-eks-cluster
-          kubectl apply -f k8s/
+          kubectl set image deployment/flask-deployment flask-app=<your-ecr-url>:latest
